--- a/_sass/post/_responsive.scss
+++ b/_sass/post/_responsive.scss
@@ -47,4 +47,12 @@
     }
     .post-header {
     }
+    .post-content {
+        img {
+            width: 100%;
+        }
+        blockquote {
+            margin:40px 10px;
+        }
+    }
 }
